<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardManager</string>
    <string name="card_listview">Card List</string>
    <string name="card_fragment">Card Fragment</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="beijinhos">O Pedro deve mil beijinhos à Daniela! tou à espera...</string>

    <string name="fragment_name">insert fragment name</string>
    <string name="fragment_date">insert date</string>
    
    
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_sign_up">New to CardManager? Sign Up!</string>

    <string name="sign_in_google">Sign In using Google</string>
    <string name="sign_in_facebook">Sign In using Facebook</string>
    
    
    
</resources>
